# drone

./: .gitignore
quad_step1/: README.md  pyproject.toml
quad_step1/docs/: system_technical_reference.md
quad_step1/notebooks/: controller_se3.ipynb  dynamics.ipynb
quad_step1/results_rl/: baseline_random_seed42.json  baseline_zero_seed42.json
quad_step1/src/quad/: __init__.py  controller_se3.py  disturbances.py  dynamics.py  estimator_ekf.py  evaluate.py  log.py  main.py  math3d.py  metrics.py  motor_model.py  params.py  plots.py  scenarios.py  sensors.py  sim.py  trajectory.py  types.py
quad_step1/src/quad/envs/: __init__.py  __main__.py  gate_track.py  gates.py  quad_racing_env.py  smoke_test.py  track.py
quad_step1/src/quad/rl/: __init__.py  aggregate_report.py  baselines.py  config.py  eval_sb3.py  run_suite.py  train_ppo.py  wrappers.py
quad_step1/tests/: test_gate_track.py
